--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,10 +10,10 @@
       <form class="col-12" >
         <div class="form-group" id="user-group">
           <input type="text" class="form-control" placeholder="Nombre de usuario" 
-          #user autofocus required/>
+          #user autofocus (keydown.enter)="loginUsuario(user.value,contrasena.value)" required/>
         </div>
         <div class="form-group" id="contrasena-group">
-          <input type="password" class="form-control" #contrasena placeholder="Contraseña" required/>
+          <input type="password" class="form-control" #contrasena placeholder="Contraseña" (keydown.enter)="loginUsuario(user.value,contrasena.value)" required/>
         </div>
         <button type="button" class="btn btn-primary" (click)="loginUsuario(user.value,contrasena.value)" ><i class="fas fa-sign-in-alt"></i> Ingresar</button>
       </form>
