desarrollo de ot

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,8 +25,8 @@
       </div>
     </div>
   </div>
-  <div class="fixed-bottom foother footer " >Soporte-Contactos:
-      <h6>Argenis Ruiz. Cel: 3182541466</h6>
-      <h6>Luis Miguel Gonzalez. Cel: 3185222474</h6>
+  <div class="fixed-bottom foother footer " >
+    <h6>Soporte: 3112864974 - 3185222474</h6>
+    <h6>info@effectivesoftware.com.co</h6>
   </div>
 </div>
