se agrega desarrollo de orden de trabajo

--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -62,9 +62,39 @@
   </div>
   <br/>
   <div class="form-row">
-    <div class="form-group col-md-3 col-sm-5 ">
-      <button type="button" class="btn btn-primary btn-sm" id="imprimir">Agregar repuesto</button>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Agregar repuesto
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Agregar repuesto</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-row">
+          <div class="form-group col-md-6 col-sm-2">
+            <textarea class="form-control " id="item" #item placeholder="Nombre repuesto"
+            required  ></textarea>
+          </div>
+          <div class="form-group col-md-6 col-sm-2">
+            <input class="form-control" id="cantidad"  type="number" placeholder="* Cantidad" name="cantidad" #cantidad required >
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" (click)= "agregardetalle(item,cantidad)">Agregar</button>
+      </div>
     </div>
+  </div>
+</div>
   </div>
   
   <table class="table table-hover">
@@ -73,26 +103,28 @@
         <th scope="col">Opciones</th>
         <th scope="col">Id producto</th>
         <th scope="col">Nombre Producto</th>
-        <th scope="col">Fecha ingreso</th>
+        <th scope="col">Cantidad</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ordenes of ordenesList">
+      <tr *ngFor="let ordenes of detallesList">
         <th scope="row">
-          <button type="button" (click)="editarUsuarios(user)" class="btn btn-secondary btn-sm" data-toggle="modal"
+          <button type="button" (click)="editarItem(ordenes,cantidad,item)" class="btn btn-secondary btn-sm" data-toggle="modal"
             data-target="#exampleModal">
             Editar
           </button>
-          <button type="button" (click)="opcionesPorUsuario(user)" class="btn  btn-secondary btn-sm" data-toggle="modal"
+          <button type="button" (click)="eliminarItem(ordenes)" class="btn  btn-secondary btn-sm" data-toggle="modal"
             data-target="#exampleModal2">
             Eliminar
           </button>
         </th>
 
-        <td>{{user.nombre}}</td>
-        <td>{{nameRol(user.usuario_id)}}</td>
-        <td>{{user.correo}}</td>
+        <td>{{ordenes.documento_detalle_id}}</td>
+        <td>{{ordenes.descripcion}}</td>
+        <td>{{ordenes.cantidad}}</td>
       </tr>
     </tbody>
   </table>
+
+
 </div>
