correccion en nombre de las teclas

--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -11,11 +11,9 @@
     <div class="form-group col-md-1 col-sm-5 ">
       <button type="button" class="btn btn-primary btn-sm" id="siguiente">Siguiente</button>
     </div>
-    <div class="form-group col-md-1 col-sm-5 ">
-      <button type="button" class="btn btn-primary btn-sm" id="buscar">Buscar</button>
-    </div>
-    <div class="form-group col-md-1 col-sm-5 ">
-      <button type="button" class="btn btn-primary btn-sm" id="Nueva" (click)="nuevaOrden()">Nueva</button>
+  
+    <div class="form-group col-md-2 col-sm-2 ">
+      <button type="button" class="btn btn-primary btn-sm" id="Nueva" (click)="nuevaOrden()">Nueva Orden de trabajo</button>
     </div>
     <div class="form-group col-md-1 col-sm-5 ">
       <button type="button" class="btn btn-primary btn-sm" id="buscar">Buscar</button>
