se agrega eliminar a ot

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -69,8 +69,7 @@
     </ul>
   </div>
 </nav>
-<div class="fixed-bottom foother footer ">
-  <h6> Effective Facturación. Sistema de facturación e inventario. </h6>
-  <h6> Soporte-Contactos:</h6>
-  <h6>Argenis Ruiz. Cel: 3182541466</h6>
+<div class="fixed-bottom foother footer " >
+  <h6>Soporte: 3112864974 - 3185222474</h6>
+  <h6>info@effectivesoftware.com.co</h6>
 </div>
