--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -227,7 +227,7 @@
               <tr *ngFor="let ordenes of ordenesBuscarList">
                 <th scope="row">
                   <button type="button"  class="btn btn-secondary btn-sm"
-                    data-toggle="modal" data-target="#exampleModal">
+                    data-toggle="modal" (click)="editarOrden(ordenes)" >
                     Editar
                   </button>
                 </th>
