--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -5,41 +5,39 @@
   </div>
   <br />
   <div class="form-row">
-    <div class="form-group col-md-1 col-sm-5 ">
+    <div class="form-group col-md-2 col-sm-12 ">
       <button type="button" class="btn btn-primary " id="anterior"
         (click)="teclaAnteriorSiguiente('anterior')">Anterior</button>
-    </div>
-    <div class="form-group col-md-1 col-sm-5 ">
-      <button type="button" class="btn btn-primary " id="siguiente"
+    
+      <button type="button" class="btn btn-primary ml-2" id="siguiente"
         (click)="teclaAnteriorSiguiente('siguiente')">Siguiente</button>
     </div>
-    <div class="form-group col-md-1 col-sm-5 ">
+    <div class="form-group col-md-2 col-sm-12 ">
       <!-- Button trigger modal -->
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buscarModal">
         Buscar
       </button>
+      <button type="button" class="btn btn-primary ml-2" id="imprimir">Imprimir</button>
     </div>
-    <div class="form-group col-md-2 col-sm-5 ">
+    <div class="form-group col-md-2 col-sm-12 ">
       <button type="button" class="btn btn-primary " id="Nueva" (click)="nuevaOrden()">Nueva Orden de trabajo</button>
     </div>
-    <div class="form-group col-md-1 col-sm-5 ">
-      <button type="button" class="btn btn-primary " id="imprimir">Imprimir</button>
-    </div>
+  
   </div>
   <div class="form-row">
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-12">
       <b>Usuario Que crea:</b> {{nombreUsuario()}}
     </div>
     <div class="form-group col-md-4">
       <b># Orden de pedido:</b> {{documento.documento_id}}
     </div>
     <div class="form-group col-md-4">
-      <b>Fecha entrada:</b> {{documento.fecha_registro}}
+      <b>Fecha entrada:</b> {{documento.fecha_registro | date: 'dd/MM/yyyy, h:mm a'}}
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-4 col-sm-2">
-      <b>Fecha entrega:</b> {{documento.fecha_entrega}}
+      <b>Fecha entrega:</b> {{documento.fecha_entrega | date: 'dd/MM/yyyy, h:mm a'}}
     </div>
     <div class="form-group col-md-4 col-sm-2">
       <input list="browsers" name="clientePV" #clientePV placeholder="Cliente" class="form-control" id="clientePV"
@@ -87,7 +85,7 @@
       Agregar repuesto
     </button>
 
-    <!-- Modal -->
+    <!-- Modal nuevo repuesto-->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -132,7 +130,7 @@
     <thead>
       <tr>
         <th scope="col">Opciones</th>
-        <th scope="col">Id producto</th>
+        <th scope="col" class="d-none d-sm-block" >Id producto</th>
         <th scope="col">Nombre Producto</th>
         <th scope="col">Cantidad</th>
       </tr>
@@ -150,7 +148,7 @@
             Eliminar
           </button>
         </th>
-        <td>{{ordenes.documento_detalle_id}}</td>
+        <td class="d-none d-sm-block">{{ordenes.documento_detalle_id}}</td>
         <td>{{ordenes.descripcion}}</td>
         <td>{{ordenes.cantidad}}</td>
       </tr>
