--- a/src/app/ventas-dia/ventas-dia.component.html
+++ b/src/app/ventas-dia/ventas-dia.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-2 col-sm-2">Documento: {{document.documento_id}}</div>
-        <div class="form-group col-md-2 col-sm-2">Fecha: {{document.fecha_registro | date: 'dd/MM/yyyy'}} </div>
+        <div class="form-group col-md-2 col-sm-2">Fecha: {{document.fecha_registro | date: 'dd/MM/yyyy, h:mm a'}} </div>
         <div class="form-group col-md-4 col-sm-2">
             <input list="browsers" name="clientePV" #clientePV placeholder="Cliente" class="form-control" id="clientePV"
                  (change)="enterTecla(clientePV)"
