--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -70,14 +70,17 @@
     </div>
   </div>
   <div class="form-row">
-   
     <div class="form-group col-md-6 col-sm-1">
       <div class="container" *ngIf="downloadURL | async; let url">
         <img [src]="url" alt="Image from AngularFireStorage" width="100%" height="200px">
       </div>
-     
+      <div class="container" *ngIf="downloadURLLocal ; let url">
+        <img [src]="url" alt="Image from AngularFireStorage" width="100%" height="200px">
+      </div>
+      
     </div>
   </div>
+  
   <br />
   <div class="form-row">
     <!-- Button trigger modal -->
@@ -110,9 +113,14 @@
             <div class="form-row">
 
               <div class="form-group col-md-12 col-sm-1">
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" capture="camera" id="fotoRepuesto" lang="es">
-                  <label class="custom-file-label" for="customFileLang">Seleccionar Archivo</label>
+                <input type="file" class="form-control-file" capture="camera" #fotoRepuesto id="fotoRepuesto" aria-describedby="fileHelp"
+                 >
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 col-sm-1">
+                <div class="container" *ngIf="downloadURL2 | async; let url2">
+                  <img [src]="url2" alt="Image from AngularFireStorage"  width="100%" height="200px">
                 </div>
               </div>
             </div>
