--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -162,7 +162,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-primary" (click)="agregardetalle(item,cantidad)">Agregar</button>
+            <button type="button" class="btn btn-primary" (click)="agregardetalle()">Agregar</button>
           </div>
         </div>
       </div>
