--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -127,8 +127,8 @@
           <div class="modal-body">
             <div class="form-row">
               <div class="form-group col-md-6 col-sm-2" *ngIf="productoFijoActivo">
-                <input list="articulos" name="articuloPV" #articuloPV placeholder="Articulo" class="form-control"
-                  id="articuloPV"  (change)="articuloSelect(articuloPV)"
+                <input list="articulos" name="articuloC" [value]="articuloPV" #articuloC placeholder="Articulo" class="form-control"
+                  id="articuloC"  (change)="articuloSelect(articuloC)"
                   >
                 <datalist id="articulos">
                   <option *ngFor="let producto of productosAll" [value]="producto.nombre">
@@ -137,7 +137,7 @@
                 </datalist>
               </div>
               <div class="form-group col-md-6 col-sm-2" *ngIf="!productoFijoActivo">
-                <textarea class="form-control " id="item" #item placeholder="Nombre repuesto" required></textarea>
+                <textarea class="form-control " id="item" #item   placeholder="Nombre repuesto" required></textarea>
               </div>
               <div class="form-group col-md-6 col-sm-2">
                 <input class="form-control" id="cantidad" type="number" placeholder="* Cantidad" name="cantidad"
