--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -70,6 +70,34 @@
             (blur)="agregarPlaca(placa)">
         </div>
       </div>
+      
+      <div class="form-row">
+        <div class="form-group col-md-4 col-sm-2">
+          <input list="marcas" name="marca" #marca placeholder="Marca" class="form-control" id="marca"
+          (change)="marcaSelect(marca)">
+        <datalist id="marcas">
+          <option *ngFor="let mar of marcaList" [value]="mar.nombre"> 
+          </option>
+        </datalist>
+        </div>
+        <div class="form-group col-md-4 col-sm-2">
+          <input list="modelos" name="modelo" #modelo placeholder="modelo" class="form-control" id="modelo"
+          (change)="guardarModelo(modelo)">
+        <datalist id="modelos">
+          <option *ngFor="let model of modeloList" [value]="model.nombre"> 
+          </option>
+        </datalist>
+        </div>
+        <div class="form-group col-md-4 col-sm-2">
+          <select class="form-control" id="linea" placeholder="Marca" #linea  (change)="asignarLinea(linea)">
+            <option>Seleccione Linea</option>
+            <option>Automovil</option>
+            <option>Camioneta</option>
+            <option>Moto</option>
+          </select>
+        </div>
+      </div>
+
       <div class="form-row">
         <div class="form-group col-md-6 col-sm-1">
           <textarea class="form-control mb-2" id="descripcionCliente" #descripcionCliente
@@ -115,7 +143,7 @@
         <tbody>
           <tr *ngFor="let ordenes of detallesList">
             <th scope="row">
-              <button type="button" (click)="editarItem(ordenes,cantidad,item,pVenta,pCompra)"
+              <button type="button" (click)="editarItem(ordenes)"
                 class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
                 Editar
               </button>
@@ -123,13 +151,13 @@
               <button type="button" (click)="eliminarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
                 data-target="#eliminarModal">
                 Eliminar
-              </button>
+               </button>
             </th>
             <td>{{ordenes.descripcion}}</td>
             <td>{{ordenes.cantidad}}</td>
             <td class="d-none d-sm-block">${{formatearNumber(ordenes.unitario)}}</td>
             <td>${{formatearNumber(ordenes.parcial)}}</td>
-            <td class="d-none d-sm-block">${{formatearNumber(ordenes.impresoComanda)}}</td>
+            <td class="d-none d-sm-block">${{formatearNumber(ordenes.impreso_comanda)}}</td>
 
           </tr>
         </tbody>
@@ -148,7 +176,17 @@
             </div>
             <div class="modal-body">
               <div class="form-row">
-                <div class="form-group col-md-6 col-sm-2">
+                <div class="form-group col-md-6 col-sm-2" *ngIf="productoFijoActivo">
+                  <input list="articulos" name="articuloC" [value]="articuloPV" #articuloC placeholder="Articulo" class="form-control"
+                    id="articuloC"  (change)="articuloSelect(articuloC)"
+                    >
+                  <datalist id="articulos">
+                    <option *ngFor="let producto of productosAll" [value]="producto.nombre">
+                      Costo:{{producto.costo_publico}} Cantidad:{{producto.cantidad}} id:{{producto.producto_id}}
+                    </option>
+                  </datalist>
+                </div>
+                <div class="form-group col-md-6 col-sm-2" *ngIf="!productoFijoActivo">
                   <textarea class="form-control " id="item" #item placeholder="Nombre repuesto" required></textarea>
                 </div>
                 <div class="form-group col-md-6 col-sm-2">
@@ -185,7 +223,7 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
               <button type="button" class="btn btn-primary"
-                (click)="agregardetalle(item,cantidad,pCompra,pVenta)">Agregar</button>
+                (click)="agregardetalle()">Agregar</button>
             </div>
           </div>
         </div>
