--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -17,7 +17,10 @@
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buscarModal">
         Buscar
       </button>
-      <button type="button" class="btn btn-primary ml-2" id="imprimir">Imprimir</button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imprimirModal">
+        Imprimir
+      </button>
+      
     </div>
     <div class="form-group col-md-2 col-sm-12 ">
       <button type="button" class="btn btn-primary " id="Nueva" (click)="nuevaOrden()">Nueva Orden de trabajo</button>
@@ -220,6 +223,35 @@
     </div>
   </div>
 
+  <!-- Modal imprimir-->
+  <div class="modal fade bd-example-modal-sm" id="imprimirModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Imprimir Orden de trabajo</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-10" >
+              Digite el número de impresora:
+            </div>
+            <div class="form-group col-md-6 col-sm-2" >
+              <input class="form-control" id="impresora" type="number" placeholder="Digite el número de impresora:" name="impresora" #impresora required>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" (click)="imprimirOrden(impresora)">Imprimir</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Modal buscar -->
   <div class="modal fade  bd-example-modal-xl" id="buscarModal" tabindex="-1" role="dialog"
     aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -288,4 +320,9 @@
       </div>
     </div>
   </div>
+  <div class="col col-ms-1">
+    <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
+
+    </a>
+</div>
 </div>
