--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -31,7 +31,9 @@
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buscarModal">
             Buscar
           </button>
-          <button type="button" class="btn btn-primary ml-2" id="imprimir">Imprimir</button>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imprimirModal">
+            Imprimir
+          </button>
         </div>
         <div class="form-group col-md-4 col-sm-12 ">
           <button type="button" class="btn btn-primary " id="Nueva" (click)="nuevaOrden()">Nueva Orden de
@@ -70,26 +72,26 @@
             (blur)="agregarPlaca(placa)">
         </div>
       </div>
-      
+
       <div class="form-row">
         <div class="form-group col-md-4 col-sm-2">
           <input list="marcas" name="marca" #marca placeholder="Marca" class="form-control" id="marca"
-          (change)="marcaSelect(marca)">
-        <datalist id="marcas">
-          <option *ngFor="let mar of marcaList" [value]="mar.nombre"> 
-          </option>
-        </datalist>
+            (change)="marcaSelect(marca)">
+          <datalist id="marcas">
+            <option *ngFor="let mar of marcaList" [value]="mar.nombre">
+            </option>
+          </datalist>
         </div>
         <div class="form-group col-md-4 col-sm-2">
           <input list="modelos" name="modelo" #modelo placeholder="modelo" class="form-control" id="modelo"
-          (change)="guardarModelo(modelo)">
-        <datalist id="modelos">
-          <option *ngFor="let model of modeloList" [value]="model.nombre"> 
-          </option>
-        </datalist>
+            (change)="guardarModelo(modelo)">
+          <datalist id="modelos">
+            <option *ngFor="let model of modeloList" [value]="model.nombre">
+            </option>
+          </datalist>
         </div>
         <div class="form-group col-md-4 col-sm-2">
-          <select class="form-control" id="linea" placeholder="Marca" #linea  (change)="asignarLinea(linea)">
+          <select class="form-control" id="linea" placeholder="Marca" #linea (change)="asignarLinea(linea)">
             <option>Seleccione Linea</option>
             <option>Automovil</option>
             <option>Camioneta</option>
@@ -143,15 +145,15 @@
         <tbody>
           <tr *ngFor="let ordenes of detallesList">
             <th scope="row">
-              <button type="button" (click)="editarItem(ordenes)"
-                class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
+              <button type="button" (click)="editarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
+                data-target="#exampleModal">
                 Editar
               </button>
               <!-- Button trigger modal -->
               <button type="button" (click)="eliminarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
                 data-target="#eliminarModal">
                 Eliminar
-               </button>
+              </button>
             </th>
             <td>{{ordenes.descripcion}}</td>
             <td>{{ordenes.cantidad}}</td>
@@ -177,9 +179,8 @@
             <div class="modal-body">
               <div class="form-row">
                 <div class="form-group col-md-6 col-sm-2" *ngIf="productoFijoActivo">
-                  <input list="articulos" name="articuloC" [value]="articuloPV" #articuloC placeholder="Articulo" class="form-control"
-                    id="articuloC"  (change)="articuloSelect(articuloC)"
-                    >
+                  <input list="articulos" name="articuloC" [value]="articuloPV" #articuloC placeholder="Articulo"
+                    class="form-control" id="articuloC" (change)="articuloSelect(articuloC)">
                   <datalist id="articulos">
                     <option *ngFor="let producto of productosAll" [value]="producto.nombre">
                       Costo:{{producto.costo_publico}} Cantidad:{{producto.cantidad}} id:{{producto.producto_id}}
@@ -222,8 +223,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-              <button type="button" class="btn btn-primary"
-                (click)="agregardetalle()">Agregar</button>
+              <button type="button" class="btn btn-primary" (click)="agregardetalle()">Agregar</button>
             </div>
           </div>
         </div>
@@ -341,6 +341,37 @@
           </div>
         </div>
       </div>
+
+      <!-- Modal imprimir-->
+      <div class="modal fade bd-example-modal-sm" id="imprimirModal" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Imprimir Orden de trabajo</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="form-row">
+                <div class="form-group col-md-6 col-sm-10">
+                  Digite el número de impresora:
+                </div>
+                <div class="form-group col-md-6 col-sm-2">
+                  <input class="form-control" id="impresora" type="number" placeholder="Digite el número de impresora:"
+                    name="impresora" #impresora required>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+              <button type="button" class="btn btn-primary" (click)="imprimirOrden(impresora)">Imprimir</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- crear cliente Modal -->
       <div class="modal fade" id="crearClienteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
@@ -359,33 +390,33 @@
                     #nombreCliente required [(ngModel)]="clienteNew.nombre">
                 </div>
                 <div class="form-group col-md-6 col-sm-6">
-                  <input class="form-control" id="apellidoCliente" placeholder=" Apellidos cliente" name="apellidoCliente"
-                  #apellidoCliente required [(ngModel)]="clienteNew.apellidos">
+                  <input class="form-control" id="apellidoCliente" placeholder=" Apellidos cliente"
+                    name="apellidoCliente" #apellidoCliente required [(ngModel)]="clienteNew.apellidos">
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6 col-sm-6">
-                  <input class="form-control" id="documentoCliente" placeholder="* Documento cliente" name="documentoCliente"
-                    #documentoCliente required [(ngModel)]="clienteNew.documento">
+                  <input class="form-control" id="documentoCliente" placeholder="* Documento cliente"
+                    name="documentoCliente" #documentoCliente required [(ngModel)]="clienteNew.documento">
                 </div>
                 <div class="form-group col-md-6 col-sm-6">
                   <input class="form-control" id="mailCliente" placeholder="* Correo cliente" name="mailCliente"
-                  #mailCliente required [(ngModel)]="clienteNew.mail">
+                    #mailCliente required [(ngModel)]="clienteNew.mail">
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6 col-sm-6">
-                  <input class="form-control" id="direccionCliente" placeholder="* Dirección cliente" name="direccionCliente"
-                    #direccionCliente required [(ngModel)]="clienteNew.direccion">
+                  <input class="form-control" id="direccionCliente" placeholder="* Dirección cliente"
+                    name="direccionCliente" #direccionCliente required [(ngModel)]="clienteNew.direccion">
                 </div>
                 <div class="form-group col-md-6 col-sm-6">
                   <input class="form-control" id="fijoCliente" placeholder="* Fijo cliente" name="fijoCliente"
-                  #fijoCliente required [(ngModel)]="clienteNew.fijo">
+                    #fijoCliente required [(ngModel)]="clienteNew.fijo">
                 </div>
               </div>
             </div>
-            
-          
+
+
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
               <button type="button" class="btn btn-primary" (click)="CrearCliente()">Crear</button>
@@ -393,7 +424,10 @@
           </div>
         </div>
       </div>
-
+      <div class="col col-ms-1">
+        <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
+        </a>
+      </div>
     </div>
     <div class="tab-pane container fade" id="factura">En desarrollo...</div>
 
