--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -17,7 +17,7 @@
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buscarModal">
         Buscar
       </button>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imprimirModal">
+      <button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#imprimirModal">
         Imprimir
       </button>
       
